3_arcadia_app/nsm/ingress_arcadia.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcadia-ingress
  namespace: arcadia
spec:
  ingressClassName: nginx-sm
  tls:
  - hosts:
    - arcadia.nsm.gcp.f5demos.ch
    secretName: default-server-secret-arcadia
  rules:
  - host: arcadia.nsm.gcp.f5demos.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              number: 80
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
      - path: /app3
        pathType: Prefix
        backend:
          service:
            name: app3
            port:
              number: 80
